# cargo-nono

./: Cargo.toml  README.md  build.rs  tea.yaml
.github/workflows/: build.yml
ci/: before_deploy.sh  script.sh
src/: check.rs  check_source.rs  ext.rs  main.rs  util.rs
